Amend Basic01 1st

--- a/JS/TODO/Basic01/index.html
+++ b/JS/TODO/Basic01/index.html
@@ -23,16 +23,16 @@
   <section class="section">
     <ul class="todo-list">
       <li>
-        <div class="todo-like">
+        <span class="todo-like">
           <i class="material-icons like">favorite_border</i>
-        </div>
-        <div class="todo-item">
+        </span>
+        <span class="todo-item">
           할 일
-        </div>
-        <div class="todo-manager">
+        </span>
+        <span class="todo-manage">
           <i class="material-icons check">check</i>
           <i class="material-icons clear">clear</i>
-        </div>
+        </span>
       </li>
     </ul>
   </section>
