Amend Basic01 2nd

--- a/JS/TODO/Basic01/index.html
+++ b/JS/TODO/Basic01/index.html
@@ -16,13 +16,14 @@
   <header class="header">
     <h1>Todo</h1>
     <div class="input-box">
+      <div class="allDelete">전체삭제</div>
       <label for="todo-input">Todo : </label>
       <input type="text" id="todo-input">
     </div>
   </header>
   <section class="section">
     <ul class="todo-list">
-      <li>
+      <!-- <li>
         <span class="todo-like">
           <i class="material-icons like">favorite_border</i>
         </span>
@@ -33,7 +34,7 @@
           <i class="material-icons check">check</i>
           <i class="material-icons clear">clear</i>
         </span>
-      </li>
+      </li> -->      <!-- li태크는 js로 연결해줌에따라 필요없게된다. -->
     </ul>
   </section>
 </div>
