--- a/Css/KimbugClass/Float-1/index.html
+++ b/Css/KimbugClass/Float-1/index.html
@@ -14,8 +14,8 @@
         <li class="tab-menu-items">
           <a href="#">Summary</a>
         </li>
-        <li class="tab-menu-items">
-          <a href="#" class="tab-menu-items active">Emails</a>
+        <li class="tab-menu-items active">
+          <a href="#">Emails</a>
         </li>
         <li class="tab-menu-items">
           <a href="#">Files</a>
