--- a/Css/KimbugClass/Float/Float-2/index.html
+++ b/Css/KimbugClass/Float/Float-2/index.html
@@ -16,7 +16,7 @@
           customer support
         </strong>
         <p>
-          안녕하세요 상언님. 문의 드린 사항에 대한 답변드립니다. 지난 12...
+          안녕하세요 샤프코더님. 문의 드린 사항에 대한 답변드립니다. 지난 12...
         </p>
       </div>
     </div>
