--- a/JS/TODO/Basic01/index.html
+++ b/JS/TODO/Basic01/index.html
@@ -34,7 +34,7 @@
           <i class="material-icons check">check</i>
           <i class="material-icons clear">clear</i>
         </span>
-      </li> -->      <!-- li태크는 js로 연결해줌에따라 필요없게된다. -->
+      </li> -->      <!-- li태그는 js로 연결해줌에따라 필요없게된다. -->
     </ul>
   </section>
 </div>
