Amend Background 01st

--- a/Css/KimbugClass/Background/index.html
+++ b/Css/KimbugClass/Background/index.html
@@ -12,9 +12,10 @@
     <article class="card">
       <div class="card-image">
         <button type="button" class="like-button" aria-label="Like this property"></button>
-        <!-- 이런 형식의 페이지가 하나만 존재하는 것이 아니며 숙소마다 페이지가 존재한다
-          host들에게 어떤 이미지를 받을지 모르는 상황이기에 css로 규격을 정해놓아야한다
-          이런 형식의 페이지에 html에 img를 삽입하는 것은 무모한 짓이다 -->
+        <!-- 검색 최적화(SEO) 관점에서 본다면 img를 삽입하는 것이 옳을 수 있지만
+          이런 형식의 페이지가 하나만 존재하는 것이 아니며 숙소마다 페이지가 존재한다.
+          host들에게 어떤 이미지를 받을지 모르는 상황이기에 css로 규격을 정해 놓는 것이
+          훨씬 유리하다. 이런 형식의 페이지에 html에 img를 삽입하는 것은 무모한 짓이다. -->
       </div>
 
       <div class="card-content">
