Upgrade Todo01 1st

--- a/JS/TODO/Basic01/index.html
+++ b/JS/TODO/Basic01/index.html
@@ -6,15 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
   <script defer src="main.js"></script>
 </head>
 
 <body>
 <div class="wrapper">
   <header class="header">
-    <h1>Todo</h1>
+    <h1>오늘의 계획</h1>
     <div class="input-box">
       <div class="allDelete">전체삭제</div>
       <label for="todo-input">Todo : </label>
