--- a/JS/Calculator/index.html
+++ b/JS/Calculator/index.html
@@ -12,26 +12,26 @@
   <input readonly id="operator">
   <input readonly type="number" id="result">
   <div class="row">
-    <button id="num-7">7</button>
-    <button id="num-8">8</button>
-    <button id="num-9">9</button>
+    <button class="num">7</button>
+    <button class="num">8</button>
+    <button class="num">9</button>
     <button id="plus">+</button>
   </div>
   <div class="row">
-    <button id="num-4">4</button>
-    <button id="num-5">5</button>
-    <button id="num-6">6</button>
+    <button class="num">4</button>
+    <button class="num">5</button>
+    <button class="num">6</button>
     <button id="minus">-</button>
   </div>
   <div class="row">
-    <button id="num-1">1</button>
-    <button id="num-2">2</button>
-    <button id="num-3">3</button>
+    <button class="num">1</button>
+    <button class="num">2</button>
+    <button class="num">3</button>
     <button id="divide">/</button>
   </div>
   <div class="row">
     <button id="clear">C</button>
-    <button id="num-0">0</button>
+    <button class="num">0</button>
     <button id="calculate">=</button>
     <button id="multiply">X</button>
   </div>
