--- a/Css/KimbugClass/Final/index.html
+++ b/Css/KimbugClass/Final/index.html
@@ -4,12 +4,37 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="grid.min.css">
   <link rel="stylesheet" href="style.css">
   <title>Final</title>
 </head>
 <body>
-  
+  <section class="landing">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="landing-content">
+            <h1 class="landing-title">
+              Change your career, <br />
+              Change your life
+            </h1>
+            <p class="landing-desc">
+              Get ahead with expert-led training in <br />
+              frondend development
+            </p>
+            <div class="button-group">
+              <a href="#" class="fill-button">
+                Apply now
+              </a>
+              <a href="#" class="fill-button inverted">
+                Learn more
+              </a>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
