--- a/Css/KimbugClass/Final/index.html
+++ b/Css/KimbugClass/Final/index.html
@@ -64,5 +64,41 @@
       </div>
     </div>
   </section>
+  <section class="program section">
+    <div class="container">
+      <div class="row justify-content-center"> <!-- md사이즈 일때 10칸 쓰는데 왼쪽 10개가 아닌 중앙 10개 설정 -->
+        <div class="col-12 col-md-10">
+            <strong class="section-category">Program</strong>
+            <h1 class="section-title">
+              Frontend Dev. <br />
+              Immersive Course
+            </h1>
+            <p class="section-desc">
+              Your best course for career transformation in front-end developement. This full-time bootcamp features expert instruction, one-on-one career coaching, and connections to top employers to get you hired.
+            </p>
+          </div>
+        </div>
+    <div class="row">
+      <div class="col-12 col-md-4"> 
+        <a href="#" class="program-card">
+          <img src="./assets/img-fulltime-campus.png" alt="" />
+          <strong>Full-Time On Campus</strong>
+        </a>
+      </div>
+      <div class="col-12 col-md-4">
+        <a href="#" class="program-card">
+          <img src="./assets/img-fulltime-remote.png" alt="" />
+          <strong>Full-Time Remote</strong>
+        </a>
+      </div>
+      <div class="col-12 col-md-4">
+        <a href="#" class="program-card">
+          <img src="./assets/img-parttime-flex.png" alt="" />
+          <strong>Part-Time Flex</strong>
+        </a>
+      </div>
+    </div>
+  </div>
+  </section>
 </body>
 </html>
